--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
+/* Set the text alignment to center for the entire app */
 .App {
   text-align: center;
 }
-
+/* Set the size and animation for the app logo */
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -25,7 +26,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #ff77a96a;
 }
 
 @keyframes App-logo-spin {
@@ -34,5 +35,108 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.App {
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f8e7e7;
+  padding: 20px;
+}
+
+header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+h1 {
+  font-size: 3rem;
+  text-transform: uppercase;
+  color: #f35d5d;
+  letter-spacing: 2px;
+}
+
+.search-bar {
+  width: 100%;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input[type="text"] {
+  font-size: 1.6rem;
+  padding: 12px;
+  border: none;
+  border-radius: 5px 0 0 5px;
+  width: 300px;
+  height: 50px;
+  background-color: #fff;
+  color: #333;
+}
+
+button[type="submit"] {
+  font-size: 1.6rem;
+  padding: 12px;
+  border: none;
+  border-radius: 0 5px 5px 0;
+  height: 50px;
+  width: 100px;
+  background-color: #dc8a8a;
+  color: #fff;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #f7acac;
+}
+
+.pokemon-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.pokemon-card {
+  width: 250px;
+  height: 350px;
+  border-radius: 20px;
+  overflow: hidden;
+  background-color: #fff;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.pokemon-card:hover {
+  animation: card-hover 0.3s ease-in-out forwards;
+}
+
+@keyframes card-hover {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-10px);
   }
 }
