--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,7 @@ button[type="submit"]:hover {
 }
 
 .pokemon-card {
+  position: relative;
   width: 250px;
   height: 350px;
   border-radius: 20px;
@@ -125,7 +126,6 @@ button[type="submit"]:hover {
   background-color: #fff;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease-in-out;
-  cursor: pointer;
 }
 
 .pokemon-card:hover {
@@ -139,4 +139,26 @@ button[type="submit"]:hover {
   to {
     transform: translateY(-10px);
   }
+}
+
+.spin-effect {
+  animation: spin 1s linear ;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.star {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: 0;
+  left: 0;
+  cursor: pointer;
 }
