--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,6 @@
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   min-height: 100vh;
   background-color: #f8e7e7;
@@ -93,19 +92,19 @@ input[type="text"] {
   color: #333;
 }
 
-button[type="submit"] {
+button {
   font-size: 1.6rem;
   padding: 12px;
   border: none;
   border-radius: 0 5px 5px 0;
   height: 50px;
-  width: 100px;
+  width: fit-content;
   background-color: #dc8a8a;
   color: #fff;
   cursor: pointer;
 }
 
-button[type="submit"]:hover {
+button:hover {
   background-color: #f7acac;
 }
 
